picture overlap error fixed

--- a/index4.css
+++ b/index4.css
@@ -5,7 +5,7 @@
     background-size: contain;
 
     width: 100vw;
-    height: 100vh;
+    height: 1110px;
 
     
 }
