--- a/index5.css
+++ b/index5.css
@@ -1,4 +1,6 @@
 .two{
+    padding: 0px;
+    margin: 0px;
     display: flex;
     flex-direction: row;
 
